update swagger and readme.md
